WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
182953
[WTR][GTK] crash log backtrace doesn't show symbol names for DatabaseProcess and NetworkProcess
https://bugs.webkit.org/show_bug.cgi?id=182953
Summary
[WTR][GTK] crash log backtrace doesn't show symbol names for DatabaseProcess ...
Fujii Hironori
Reported
2018-02-19 20:45:14 PST
[WTR][GTK] crash log backtrace doesn't show symbol names for DatabaseProcess and WebKitNetworkProcess
Attachments
Patch
(2.80 KB, patch)
2018-02-19 20:48 PST
,
Fujii Hironori
fujii
: review-
fujii
: commit-queue-
Details
Formatted Diff
Diff
Patch
(2.79 KB, patch)
2018-02-19 20:55 PST
,
Fujii Hironori
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews205 for win-future
(11.50 MB, application/zip)
2018-02-19 22:48 PST
,
EWS Watchlist
no flags
Details
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Fujii Hironori
Comment 1
2018-02-19 20:48:43 PST
Created
attachment 334235
[details]
Patch
Fujii Hironori
Comment 2
2018-02-19 20:55:38 PST
Created
attachment 334236
[details]
Patch
EWS Watchlist
Comment 3
2018-02-19 22:48:41 PST
Comment on
attachment 334236
[details]
Patch
Attachment 334236
[details]
did not pass win-ews (win): Output:
http://webkit-queues.webkit.org/results/6584460
New failing tests: http/tests/preload/onerror_event.html
EWS Watchlist
Comment 4
2018-02-19 22:48:52 PST
Created
attachment 334243
[details]
Archive of layout-test-results from ews205 for win-future The attached test failures were seen while running run-webkit-tests on the win-ews. Bot: ews205 Port: win-future Platform: CYGWIN_NT-6.1-2.9.0-0.318-5-3-x86_64-64bit
WebKit Commit Bot
Comment 5
2018-02-19 23:08:05 PST
Comment on
attachment 334236
[details]
Patch Clearing flags on attachment: 334236 Committed
r228731
: <
https://trac.webkit.org/changeset/228731
>
WebKit Commit Bot
Comment 6
2018-02-19 23:08:07 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug