[WTR][GTK] crash log backtrace doesn't show symbol names for DatabaseProcess and NetworkProcess https://bugs.webkit.org/show_bug.cgi?id=182953

Patch by Fujii Hironori <Hironori.Fujii@sony.com> on 2018-02-19
Reviewed by Carlos Garcia Campos.

* Scripts/webkitpy/port/gtk.py:
(GtkPort._get_crash_log): Removed the code to convert WebProcess name.
* WebKitTestRunner/TestController.cpp:
(WTR::TestController::webProcessName): Return the correct program name for GTK+ port.
(WTR::TestController::networkProcessName): Ditto.
(WTR::TestController::databaseProcessName): Ditto.

Canonical link: https://commits.webkit.org/198710@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@228731 268f45cc-cd09-0410-ab3c-d52691b4dbfc